--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
 		"downloads",
 		"declarativeContent"
 	],
+	"browser_action": {
+      "default_icon": "icon.png",
+      "default_title": "Bot Of Legends Helper",      
+      "default_popup": "main.html"        
+    },
 	"content_scripts": [{
 		"matches": [
 			"http://forum.botoflegends.com/*",
