--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,9 @@
 	"description": "Bot of Legends Helper Plugin",
 	"permissions": [
 		"downloads",
-		"declarativeContent"
+		"declarativeContent",
+		"https://*/*",
+		"http://*/*"
 	],
 	"browser_action": {
       "default_icon": "icon.png",
