--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Bot of Legends Helper",
-	"version": "1.0",
+	"version": "1.0.1",
 	"description": "Bot of Legends Helper Plugin",
 	"permissions": [
 		"downloads",
@@ -29,9 +29,10 @@
 	}],
 	"background" : {
 		"scripts": ["background.js"],
-		"persistent": false
+		"persistent": true
   	},
 	"offline_enabled": false,
-	"manifest_version": 2
+	"manifest_version": 2,
+	"web_accessible_resources": [ "icon.png","ISync_icon.png"]
 }
 
